--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -152,7 +152,9 @@
   research-areas: Number Theory, Arithmetic Geometry
   phd: Cambridge, UK
   office: X27
-  author-name: "Kakde, Mahesh"
+  author-names: 
+    - "Kakde, Mahesh"
+    - "Kakde, M."
   phone-ext: 2388
 
 - name: Apoorva Khare
