--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -1205,6 +1205,19 @@
   mrclass: '30C45 (30C50 52A99)'
   volume: '285'
 
+- url: 'https://doi.org/10.1007/978-3-030-44651-2_19'
+  mrnumber: '4181311'
+  pages: '307-341'
+  year: '[2020] \copyright 2020'
+  publisher: 'Birkh&auml;user/Springer, Cham'
+  booktitle: 'Operator algebras, Toeplitz operators and related topics'
+  title: 'Toeplitz $C^*$-algebras on boundary orbits of symmetric domains'
+  doi: '10.1007/978-3-030-44651-2\_19'
+  author: 'Misra, Gadadhar and Upmeier, Harald'
+  series: 'Oper. Theory Adv. Appl.'
+  mrclass: '32M15 (14M12 17C36 46E22 47B35 47L80)'
+  volume: '279'
+
 - number: '5'
   author: 'Manam, S. R.'
   fjournal: 'IMA Journal of Applied Mathematics'
