one more update

--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -1,3 +1,17 @@
+- number: '1'
+  author: 'Kus, Deniz and Venkatesh, R.'
+  fjournal: 'Moscow Mathematical Journal'
+  url: 'https://doi.org/10.17323/1609-4514-2021-21-1-99-127'
+  pages: '99-127'
+  year: '2021'
+  title: 'Borel-de Siebenthal theory for affine reflection systems'
+  doi: '10.17323/1609-4514-2021-21-1-99-127'
+  issn: '1609-3321'
+  journal: 'Mosc. Math. J.'
+  mrnumber: '4219037'
+  mrclass: '17B67 (17B22)'
+  volume: '21'
+
 - mrnumber: '2664573'
   pages: '51-57'
   year: '2010'
