--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -540,6 +540,17 @@
   mrclass: '32A60 (32C99 32Q35 46E22 47B32 53C07)'
   volume: '169'
 
+- mrnumber: '4321169'
+  pages: '63-87'
+  year: '[2020] \copyright 2020'
+  publisher: 'Eur. Math. Soc., Z&uuml;rich'
+  booktitle: 'Handbook of Teichm&uuml;ller theory. Vol. VII'
+  title: 'Complex geometry of Teichm&uuml;ller domains'
+  author: 'Gupta, Subhojoy and Seshadri, Harish'
+  series: 'IRMA Lect. Math. Theor. Phys.'
+  mrclass: '30F60 (30C62 30F35 32G15)'
+  volume: '30'
+
 - number: '2'
   author: 'Gupta, Subhojoy'
   fjournal: 'Journal of Topology and Analysis'
@@ -2680,6 +2691,17 @@
   mrnumber: '3149618'
   mrclass: '65N30 (65K15 65N15)'
   volume: '14'
+
+- mrnumber: '3931445'
+  pages: '1-7'
+  year: '2017'
+  publisher: 'Springer, Cham'
+  booktitle: 'L-functions and automorphic forms'
+  title: 'Sturm-like bound for square-free Fourier coefficients'
+  author: 'Anamby, Pramath and Das, Soumya'
+  series: 'Contrib. Math. Comput. Sci.'
+  mrclass: '11F30'
+  volume: '10'
 
 - number: '3'
   author: 'Bagchi, Bhaskar and Datta, Basudeb'
@@ -7478,6 +7500,19 @@
   mrclass: '91A23 (60H10 60H35 91A05 91A15)'
   volume: '19'
 
+- url: 'https://doi.org/10.1007/978-3-030-43380-2_11'
+  mrnumber: '4200255'
+  pages: '221-265'
+  year: '[2020] \copyright 2020'
+  publisher: 'Birkh&auml;user/Springer, Cham'
+  booktitle: 'Operator theory, operator algebras and their interactions with geometry and topology--Ronald G. Douglas memorial volume'
+  title: 'Decomposition of the tensor product of two Hilbert modules'
+  doi: '10.1007/978-3-030-43380-2\_11'
+  author: 'Ghara, Soumitra and Misra, Gadadhar'
+  series: 'Oper. Theory Adv. Appl.'
+  mrclass: '47B32 (32A26 47A13 47A56 47A68 47B13)'
+  volume: '278'
+
 - number: '2'
   author: 'Narayanan, E. K. and Sen, Suparna'
   fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
@@ -8967,21 +9002,6 @@
   mrclass: '11A05 (05A05 11A07 11A41)'
   volume: '16'
 
-- number: '10'
-  author: 'Balodi, Mamta and Huang, Hua-Lin and Kumar, Shiv Datt'
-  fjournal: 'Reviews in Mathematical Physics. A Journal for Both Review and Original Research Papers in the Field of Mathematical Physics'
-  url: 'https://doi.org/10.1142/S0129055X17300035'
-  pages: '1730003, 20'
-  year: '2017'
-  mrreviewer: 'Fang Li'
-  title: 'On the classification of finite quasi-quantum groups'
-  doi: '10.1142/S0129055X17300035'
-  issn: '0129-055X'
-  journal: 'Rev. Math. Phys.'
-  mrnumber: '3720509'
-  mrclass: '16T15 (16G20 57T05)'
-  volume: '29'
-
 - number: '2'
   author: 'Datta, Basudeb'
   fjournal: 'Indian Academy of Sciences. Proceedings. Mathematical Sciences'
@@ -9394,6 +9414,34 @@
   mrnumber: '3471985'
   mrclass: '18D10 (13N15)'
   volume: '23'
+
+- number: '10'
+  author: 'Balodi, Mamta and Huang, Hua-Lin and Kumar, Shiv Datt'
+  fjournal: 'Reviews in Mathematical Physics. A Journal for Both Review and Original Research Papers in the Field of Mathematical Physics'
+  url: 'https://doi.org/10.1142/S0129055X17300035'
+  pages: '1730003, 20'
+  year: '2017'
+  mrreviewer: 'Fang Li'
+  title: 'On the classification of finite quasi-quantum groups'
+  doi: '10.1142/S0129055X17300035'
+  issn: '0129-055X'
+  journal: 'Rev. Math. Phys.'
+  mrnumber: '3720509'
+  mrclass: '16T15 (16G20 57T05)'
+  volume: '29'
+
+- url: 'https://doi.org/10.4064/bc120-5'
+  mrnumber: '4275879'
+  pages: '53-69'
+  year: '2020'
+  publisher: 'Polish Acad. Sci. Inst. Math., Warsaw'
+  booktitle: 'Quantum dynamics'
+  title: 'Spectra as universal objects in categories of supports'
+  doi: '10.4064/bc120-5'
+  author: 'Banerjee, Abhishek'
+  series: 'Banach Center Publ.'
+  mrclass: '18F70 (06D05 14A05 14A22)'
+  volume: '120'
 
 - number: '4'
   author: 'Borkar, Vivek S. and Ghosh, Mrinal K.'
@@ -13161,20 +13209,6 @@
   mrclass: '42A85 (43A32)'
   volume: '3'
 
-- number: '2'
-  author: 'Chakrabarti, A. and Martha, S. C.'
-  fjournal: 'Applied Mathematics and Computation'
-  url: 'http://dx.doi.org/10.1016/j.amc.2009.01.088'
-  pages: '459-466'
-  year: '2009'
-  title: 'Approximate solutions of Fredholm integral equations of the second kind'
-  doi: '10.1016/j.amc.2009.01.088'
-  issn: '0096-3003'
-  journal: 'Appl. Math. Comput.'
-  mrnumber: '2526044'
-  mrclass: '65R20 (45B05)'
-  volume: '211'
-
 - number: '4'
   author: 'Vaze, Rahul and Iyer, Srikanth'
   fjournal: 'Journal of Applied Probability'
@@ -13489,6 +13523,32 @@
   mrclass: '15B33'
   volume: '64'
 
+- number: '2'
+  author: 'Chakrabarti, A. and Martha, S. C.'
+  fjournal: 'Applied Mathematics and Computation'
+  url: 'http://dx.doi.org/10.1016/j.amc.2009.01.088'
+  pages: '459-466'
+  year: '2009'
+  title: 'Approximate solutions of Fredholm integral equations of the second kind'
+  doi: '10.1016/j.amc.2009.01.088'
+  issn: '0096-3003'
+  journal: 'Appl. Math. Comput.'
+  mrnumber: '2526044'
+  mrclass: '65R20 (45B05)'
+  volume: '211'
+
+- number: '1'
+  author: 'Roy, Dipankar'
+  fjournal: 'Journal of Statistical Mechanics: Theory and Experiment'
+  url: 'https://doi.org/10.1088/1742-5468/abc7ba'
+  pages: 'Paper No. 013201, 19'
+  year: '2021'
+  title: 'The phase diagram for a class of multispecies permissive asymmetric exclusion processes'
+  doi: '10.1088/1742-5468/abc7ba'
+  mrclass: '82C22'
+  journal: 'J. Stat. Mech. Theory Exp.'
+  mrnumber: '4248770'
+
 - number: '4'
   author: 'Gudi, Thirupathi'
   fjournal: 'International Journal of Numerical Analysis and Modeling. Series B'
@@ -13568,21 +13628,6 @@
   mrnumber: '2797985'
   mrclass: '60J80 (60F05 60K05)'
   volume: '17'
-
-- number: '4'
-  author: 'Gaussier, Herv&eacute; and Seshadri, Harish'
-  fjournal: 'Computational Methods and Function Theory'
-  url: 'https://doi.org/10.1007/s40315-018-0243-5'
-  pages: '617-641'
-  year: '2018'
-  mrreviewer: 'Nikolai Marinov Nikolov'
-  title: 'On the Gromov hyperbolicity of convex domains in $\Bbb C^n$'
-  doi: '10.1007/s40315-018-0243-5'
-  issn: '1617-9447'
-  journal: 'Comput. Methods Funct. Theory'
-  mrnumber: '3874885'
-  mrclass: '32F45 (32Q45 53C23)'
-  volume: '18'
 
 - number: '3'
   author: 'Dhara, Souvik and van der Hofstad, Remco and van Leeuwaarden, Johan S. H. and Sen, Sanchayan'
@@ -13739,6 +13784,18 @@
   mrclass: '35Q53 (34A35 35F25 35L60 76L05)'
   volume: '63'
 
+- author: 'Mukherji, Purabi'
+  url: 'https://doi.org/10.1007/978-981-15-9620-9'
+  mrnumber: '4242221'
+  pages: 'xiv+177'
+  year: '[2020] \copyright 2020'
+  note: 'With a foreword by Gadadhar Misra and J. C. Bose'
+  title: 'Research schools on number theory in India--during the 20th century'
+  doi: '10.1007/978-981-15-9620-9'
+  mrclass: '01A60 (01A32 11-03)'
+  publisher: 'Springer, Singapore'
+  isbn: '978-981-15-9619-3; 978-981-15-9620-9'
+
 - number: '3'
   author: 'Choudhury, Projesh Nath and Sivakumar, K. C.'
   fjournal: 'Linear and Multilinear Algebra'
@@ -13848,6 +13905,31 @@
   mrnumber: '3071106'
   mrclass: '46B20 (46L05 46L08)'
   volume: '407'
+
+- author: 'Bagchi, Sayan and Hait, Sourav and Roncal, Luz and Thangavelu, Sundaram'
+  fjournal: 'New York Journal of Mathematics'
+  pages: '631-675'
+  year: '2021'
+  title: 'On the maximal function associated to the spherical means on the Heisenberg group'
+  journal: 'New York J. Math.'
+  mrnumber: '4250270'
+  mrclass: '43A80 (22E25 22E30 42B15 42B25)'
+  volume: '27'
+
+- number: '4'
+  author: 'Gaussier, Herv&eacute; and Seshadri, Harish'
+  fjournal: 'Computational Methods and Function Theory'
+  url: 'https://doi.org/10.1007/s40315-018-0243-5'
+  pages: '617-641'
+  year: '2018'
+  mrreviewer: 'Nikolai Marinov Nikolov'
+  title: 'On the Gromov hyperbolicity of convex domains in $\Bbb C^n$'
+  doi: '10.1007/s40315-018-0243-5'
+  issn: '1617-9447'
+  journal: 'Comput. Methods Funct. Theory'
+  mrnumber: '3874885'
+  mrclass: '32F45 (32Q45 53C23)'
+  volume: '18'
 
 - number: '2'
   author: 'Gadgil, Siddhartha and Pandit, Suhas'
@@ -15830,21 +15912,6 @@
   mrclass: '37D45 (34C15)'
   volume: '19'
 
-- number: '10'
-  author: 'Boggarapu, Pradeep and Roncal, Luz and Thangavelu, Sundaram'
-  fjournal: 'Transactions of the American Mathematical Society'
-  url: 'https://doi.org/10.1090/tran/6861'
-  pages: '7021-7047'
-  year: '2017'
-  mrreviewer: 'Elena Cordero'
-  title: 'Mixed norm estimates for the Ces&agrave;ro means associated with Dunkl-Hermite expansions'
-  doi: '10.1090/tran/6861'
-  issn: '0002-9947'
-  journal: 'Trans. Amer. Math. Soc.'
-  mrnumber: '3683101'
-  mrclass: '42C10 (33C45 35J10 42B08 42B35 43A90)'
-  volume: '369'
-
 - number: '4'
   author: 'Sengadir, T. and Pai, D. V. and Pani, A. K.'
   fjournal: 'Nonlinear Analysis. Theory, Methods \& Applications. An International Multidisciplinary Journal. Series A: Theory and Methods'
@@ -16021,6 +16088,34 @@
   mrnumber: '3192685'
   mrclass: '76W05'
   volume: '49'
+
+- number: '10'
+  author: 'Boggarapu, Pradeep and Roncal, Luz and Thangavelu, Sundaram'
+  fjournal: 'Transactions of the American Mathematical Society'
+  url: 'https://doi.org/10.1090/tran/6861'
+  pages: '7021-7047'
+  year: '2017'
+  mrreviewer: 'Elena Cordero'
+  title: 'Mixed norm estimates for the Ces&agrave;ro means associated with Dunkl-Hermite expansions'
+  doi: '10.1090/tran/6861'
+  issn: '0002-9947'
+  journal: 'Trans. Amer. Math. Soc.'
+  mrnumber: '3683101'
+  mrclass: '42C10 (33C45 35J10 42B08 42B35 43A90)'
+  volume: '369'
+
+- url: 'https://doi.org/10.1007/978-3-030-43380-2_20'
+  mrnumber: '4200264'
+  pages: '425-453'
+  year: '[2020] \copyright 2020'
+  publisher: 'Birkh&auml;user/Springer, Cham'
+  booktitle: 'Operator theory, operator algebras and their interactions with geometry and topology--Ronald G. Douglas memorial volume'
+  title: 'Singular Hilbert modules on Jordan-Kepler varieties'
+  doi: '10.1007/978-3-030-43380-2\_20'
+  author: 'Misra, Gadadhar and Upmeier, Harald'
+  series: 'Oper. Theory Adv. Appl.'
+  mrclass: '32M15 (14M12 17C36 46E22 47B35)'
+  volume: '278'
 
 - number: '3'
   author: 'Sachdev, P. L. and Philip, Varughese'
@@ -16969,6 +17064,17 @@
   issn: '1073-7928'
   journal: 'Int. Math. Res. Not. IMRN'
   mrnumber: '4266152'
+
+- number: '1'
+  author: 'Ayyer, Arvind and Prasad, Amritanshu and Spallone, Steven'
+  fjournal: 'Indian Journal of Discrete Mathematics'
+  pages: '1-22'
+  year: '2019'
+  title: 'Macdonald trees and determinants of representations for finite Coxeter groups'
+  journal: 'Indian J. Discrete Math.'
+  mrnumber: '4317619'
+  mrclass: '05E10 (05A15 05A17)'
+  volume: '5'
 
 - number: '1'
   author: 'Kumari, M. and Nath, G.'
