--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -123,7 +123,9 @@
   phd: Michigan
   phone-ext:
   office: L25
-  author-name: Gupta, Purvi
+  author-names: 
+    - Gupta, Purvi
+    - Gupta, P.
  
 - name: Subhojoy Gupta
   user-id: subhojoy
