"copyright" corrected in YAML

--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -542,7 +542,7 @@
 
 - mrnumber: '4321169'
   pages: '63--87'
-  year: '[2020] \copyright 2020'
+  year: '2020'
   publisher: 'Eur. Math. Soc., Z\"urich'
   booktitle: 'Handbook of Teichm\"uller theory. Vol. VII'
   title: 'Complex geometry of Teichm\"uller domains'
@@ -1233,7 +1233,7 @@
 - url: 'https://doi.org/10.1007/978-3-030-44651-2_19'
   mrnumber: '4181311'
   pages: '307--341'
-  year: '[2020] \copyright 2020'
+  year: '2020'
   publisher: 'Birkh\"auser/Springer, Cham'
   booktitle: 'Operator algebras, Toeplitz operators and related topics'
   title: 'Toeplitz $C^*$-algebras on boundary orbits of symmetric domains'
@@ -7503,7 +7503,7 @@
 - url: 'https://doi.org/10.1007/978-3-030-43380-2_11'
   mrnumber: '4200255'
   pages: '221--265'
-  year: '[2020] \copyright 2020'
+  year: '2020'
   publisher: 'Birkh\"auser/Springer, Cham'
   booktitle: 'Operator theory, operator algebras and their interactions with geometry and topology---Ronald G. Douglas memorial volume'
   title: 'Decomposition of the tensor product of two Hilbert modules'
@@ -12489,7 +12489,7 @@
 
 - mrnumber: '4179368'
   pages: '59--72'
-  year: '[2020] \copyright 2020'
+  year: '2020'
   publisher: 'Springer, Singapore'
   booktitle: 'Modular forms and related topics in number theory'
   title: 'Omega results for Fourier coefficients of half-integral weight and Siegel modular forms'
@@ -13788,7 +13788,7 @@
   url: 'https://doi.org/10.1007/978-981-15-9620-9'
   mrnumber: '4242221'
   pages: 'xiv+177'
-  year: '[2020] \copyright 2020'
+  year: '2020'
   note: 'With a foreword by Gadadhar Misra and J. C. Bose'
   title: 'Research schools on number theory in India---during the 20th century'
   doi: '10.1007/978-981-15-9620-9'
@@ -15942,7 +15942,7 @@
 
 - mrnumber: '4353107'
   pages: '139--164'
-  year: '[2020] \copyright 2020'
+  year: '2020'
   publisher: 'Hindustan Book Agency, Delhi'
   booktitle: 'Elements of dynamical systems'
   title: 'Complex dynamics'
@@ -16107,7 +16107,7 @@
 - url: 'https://doi.org/10.1007/978-3-030-43380-2_20'
   mrnumber: '4200264'
   pages: '425--453'
-  year: '[2020] \copyright 2020'
+  year: '2020'
   publisher: 'Birkh\"auser/Springer, Cham'
   booktitle: 'Operator theory, operator algebras and their interactions with geometry and topology---Ronald G. Douglas memorial volume'
   title: 'Singular Hilbert modules on Jordan-Kepler varieties'
