--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -1,7 +1,7 @@
 - name: "Gianluca Faraco"
   position: "Raman PDF"
   phd: "University of Ferrera, Italy"
-  area: "Low dimensional topology"
+  area: "Low-dimensional topology"
   start: "2020"
   end: "2021"
   present: "Visiting Fellow, Max Planck Institute for Mathematics, Bonn"
