Updated Alumni Postdoc and Alumni Inspire Faculty

--- a/_data/inspire-alumni.yaml
+++ b/_data/inspire-alumni.yaml
@@ -16,7 +16,7 @@
  
 - name: "Ramesh Manna" 
   position: "INSPIRE Faculty"
-  phd: "IITK"
+  phd: "HRI, Allahabad"
   area: "Harmonic analysis"
   start: "2021" 
   end: "2021"
