--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -41,7 +41,7 @@
 
 - name: "Ramesh Manna"  
   position: "Kothari/IISc Raman PDF"  
-  phd: "IITK"  
+  phd: "HRI, Allahabad"  
   area: "Harmonic analysis"  
   start: "2020"  
   end: "2020"  
