--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -149,6 +149,12 @@
   image: true
   research-area: Harmonic Analysis   
 
+- name: Sankar K
+  phd: IIT Kanpur
+  user-id: sankark
+  position: UGC Kothari
+  image: true
+  research-area: Homogenization of Partial Differential Equations
 
 
 
