--- a/_data/publ.yaml
+++ b/_data/publ.yaml
@@ -6369,20 +6369,6 @@
   journal: 'Int. Math. Res. Not. IMRN'
   mrnumber: '3180597'
 
-- number: '1'
-  author: 'Datta, Basudeb and Maity, Dipendu'
-  fjournal: 'Discrete Mathematics'
-  url: 'https://doi.org/10.1016/j.disc.2021.112652'
-  pages: 'Paper No. 112652, 13'
-  year: '2022'
-  title: 'Platonic solids, Archimedean solids and semi-equivelar maps on the sphere'
-  doi: '10.1016/j.disc.2021.112652'
-  issn: '0012-365X'
-  journal: 'Discrete Math.'
-  mrnumber: '4320365'
-  mrclass: '52B10 (52B70)'
-  volume: '345'
-
 - number: '5'
   author: 'Chakrabarti, A. and Mandal, B. N. and Banerjea, S. and Sahoo, T.'
   fjournal: 'Journal of the Indian Institute of Science. A Multidisciplinary Reviews Journal'
@@ -6628,6 +6614,31 @@
   mrnumber: '4209016'
   mrclass: '15B48 (65G30)'
   volume: '617'
+
+- mrnumber: '4362539'
+  pages: '408--418'
+  year: '[2020] \copyright 2020'
+  publisher: 'Am. Inst. Math. Sci. (AIMS), Springfield, MO'
+  booktitle: 'Hyperbolic problems: theory, numerics, applications'
+  title: 'A posteriori error analysis for patch-wise local projection stabilized FEM for convection-diffusion problems'
+  author: 'Dond, Asha K. and Gudi, Thirupathi'
+  series: 'AIMS Ser. Appl. Math.'
+  mrclass: '65N30 (35Jxx 65N12 65N15)'
+  volume: '10'
+
+- number: '1'
+  author: 'Datta, Basudeb and Maity, Dipendu'
+  fjournal: 'Discrete Mathematics'
+  url: 'https://doi.org/10.1016/j.disc.2021.112652'
+  pages: 'Paper No. 112652, 13'
+  year: '2022'
+  title: 'Platonic solids, Archimedean solids and semi-equivelar maps on the sphere'
+  doi: '10.1016/j.disc.2021.112652'
+  issn: '0012-365X'
+  journal: 'Discrete Math.'
+  mrnumber: '4320365'
+  mrclass: '52B10 (52B70)'
+  volume: '345'
 
 - author: 'Banerjee, Abhishek'
   fjournal: 'Rendiconti del Seminario Matematico della Universit\`a di Padova'
@@ -7566,6 +7577,19 @@
   mrnumber: '833602'
   mrclass: '47G05 (45P05 47B35)'
   volume: '114'
+
+- author: 'Binda, Federico and Krishna, Amalendu'
+  fjournal: 'Journal de l''\''Ecole polytechnique. Math\''ematiques'
+  url: 'https://doi.org/10.5802/jep.183'
+  pages: '281--325'
+  year: '2022'
+  title: 'Zero-cycle groups on algebraic varieties'
+  doi: '10.5802/jep.183'
+  issn: '2429-7100'
+  journal: 'J. \''Ec. polytech. Math.'
+  mrnumber: '4373665'
+  mrclass: '14C15 (14F42 19E15)'
+  volume: '9'
 
 - number: '1'
   author: 'Patil, D. P.'
@@ -11825,19 +11849,19 @@
   mrclass: '32A25 (32A38 46E20 46J15)'
   volume: '13'
 
-- number: '16'
-  author: 'Chattopadhyay, Arup and Sain, Debmalya and Senapati, Tanusri'
-  fjournal: 'Linear and Multilinear Algebra'
-  url: 'https://doi.org/10.1080/03081087.2019.1702916'
-  pages: '2998--3009'
-  year: '2021'
-  title: 'characterization of symmetric points in $l^n_p$-spaces'
-  doi: '10.1080/03081087.2019.1702916'
-  issn: '0308-1087'
-  journal: 'Linear Multilinear Algebra'
-  mrnumber: '4338341'
-  mrclass: '47L05 (46B20)'
-  volume: '69'
+- number: '1'
+  author: 'Iyer, Srikanth K. and Jhawar, Sanjoy Kr.'
+  fjournal: 'Mathematical Physics, Analysis and Geometry. An International Journal Devoted to the Theory and Applications of Analysis and Geometry to Physics'
+  url: 'https://doi.org/10.1007/s11040-021-09409-y'
+  pages: 'Paper No. 4, 40'
+  year: '2022'
+  title: 'Phase transitions and percolation at criticality in enhanced random connection models'
+  doi: '10.1007/s11040-021-09409-y'
+  issn: '1385-0172'
+  journal: 'Math. Phys. Anal. Geom.'
+  mrnumber: '4366076'
+  mrclass: '82B43 (05C82 60K35 82B26)'
+  volume: '25'
 
 - number: '1'
   author: 'Ravindran, Renuka and Prasad, Phoolan'
@@ -12005,6 +12029,34 @@
   mrnumber: '4287737'
   mrclass: '53C55 (30F99)'
   volume: '388'
+
+- number: '2'
+  author: 'Datar, Ved and Jacob, Adam'
+  fjournal: 'Journal of Geometric Analysis'
+  url: 'https://doi.org/10.1007/s12220-021-00808-9'
+  pages: 'Paper No. 69, 30'
+  year: '2022'
+  title: 'Hermitian-Yang-Mills connections on collapsing elliptically fibered $K$3 surfaces'
+  doi: '10.1007/s12220-021-00808-9'
+  issn: '1050-6926'
+  journal: 'J. Geom. Anal.'
+  mrnumber: '4363742'
+  mrclass: '53B35 (53C07 53C26 53C55)'
+  volume: '32'
+
+- number: '16'
+  author: 'Chattopadhyay, Arup and Sain, Debmalya and Senapati, Tanusri'
+  fjournal: 'Linear and Multilinear Algebra'
+  url: 'https://doi.org/10.1080/03081087.2019.1702916'
+  pages: '2998--3009'
+  year: '2021'
+  title: 'characterization of symmetric points in $l^n_p$-spaces'
+  doi: '10.1080/03081087.2019.1702916'
+  issn: '0308-1087'
+  journal: 'Linear Multilinear Algebra'
+  mrnumber: '4338341'
+  mrclass: '47L05 (46B20)'
+  volume: '69'
 
 - number: '12'
   author: 'Ravindran, R. and Sundar, S. and Prasad, P.'
@@ -12669,20 +12721,6 @@
   mrclass: '01A99'
   volume: '23'
 
-- number: '1-4'
-  author: 'Venkatachalappa, M. and Rudraiah, N. and Sachdev, P. L.'
-  fjournal: 'Acta Mechanica'
-  url: 'http://dx.doi.org/10.1007/BF01182569'
-  pages: '1--11'
-  year: '1992'
-  title: 'Exact nonlinear travelling hydromagnetic wave solutions'
-  doi: '10.1007/BF01182569'
-  issn: '0001-5970'
-  journal: 'Acta Mech.'
-  mrnumber: '1164922'
-  mrclass: '76W05 (35Q35)'
-  volume: '93'
-
 - author: 'Das, Soumya and Kohnen, Winfried'
   fjournal: 'Advances in Mathematics'
   url: 'https://doi.org/10.1016/j.aim.2015.05.007'
@@ -12936,6 +12974,34 @@
   mrclass: '47A13 (47A15)'
   volume: '79'
 
+- number: '1-4'
+  author: 'Venkatachalappa, M. and Rudraiah, N. and Sachdev, P. L.'
+  fjournal: 'Acta Mechanica'
+  url: 'http://dx.doi.org/10.1007/BF01182569'
+  pages: '1--11'
+  year: '1992'
+  title: 'Exact nonlinear travelling hydromagnetic wave solutions'
+  doi: '10.1007/BF01182569'
+  issn: '0001-5970'
+  journal: 'Acta Mech.'
+  mrnumber: '1164922'
+  mrclass: '76W05 (35Q35)'
+  volume: '93'
+
+- number: '1'
+  author: 'Gaddam, Sharat and Gudi, Thirupathi and Porwal, Kamana'
+  fjournal: 'BIT. Numerical Mathematics'
+  url: 'https://doi.org/10.1007/s10543-021-00869-w'
+  pages: '89--124'
+  year: '2022'
+  title: 'Two new approaches for solving elliptic obstacle problems using discontinuous Galerkin methods'
+  doi: '10.1007/s10543-021-00869-w'
+  issn: '0006-3835'
+  journal: 'BIT'
+  mrnumber: '4375026'
+  mrclass: '65N30 (65K15 65N15)'
+  volume: '62'
+
 - number: '2'
   author: 'Mahajan, Prachi'
   fjournal: 'Annales Polonici Mathematici'
@@ -13064,6 +13130,20 @@
   mrnumber: '3437081'
   mrclass: '91F10 (60H30 91B64 93C95 93E20)'
   volume: '34'
+
+- number: '2'
+  author: 'Bera, Sayani and Chandel, Vikramjeet Singh and Londhe, Mayuresh'
+  fjournal: 'Journal of Geometric Analysis'
+  url: 'https://doi.org/10.1007/s12220-021-00833-8'
+  pages: 'Paper No. 70, 27'
+  year: '2022'
+  title: 'On a spectral version of Cartan''s theorem'
+  doi: '10.1007/s12220-021-00833-8'
+  issn: '1050-6926'
+  journal: 'J. Geom. Anal.'
+  mrnumber: '4363743'
+  mrclass: '32H02 (15A18 32F45 32H50 47A56)'
+  volume: '32'
 
 - number: '2'
   author: 'Bhattacharjee, Monojit and Sarkar, Jaydeb'
@@ -14573,6 +14653,20 @@
   mrnumber: '2013069'
   mrclass: '45E99 (30E20 30E25 45H05)'
   volume: '16'
+
+- number: '1'
+  author: 'Ganguly, Pritam and Thangavelu, Sundaram'
+  fjournal: 'Annali di Matematica Pura ed Applicata. Series IV'
+  url: 'https://doi.org/10.1007/s10231-021-01116-3'
+  pages: '289--311'
+  year: '2022'
+  title: 'An uncertainty principle for spectral projections on rank one symmetric spaces of noncompact type'
+  doi: '10.1007/s10231-021-01116-3'
+  issn: '0373-3114'
+  journal: 'Ann. Mat. Pura Appl. (4)'
+  mrnumber: '4375010'
+  mrclass: '43A85 (22E30 33C45 43A25)'
+  volume: '201'
 
 - author: 'Nandakumaran, A. K. and Sufian, Abu'
   fjournal: 'Journal of Differential Equations'
