--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -16,9 +16,9 @@
 - name  : Projesh Nath Choudhury 
   phd: IIT Madras
   user-id: projeshc
-  position: NBHM
+  position: Raman PDF
   image: true
-  research-area:  Linear algebra (with combinatorial flavour)
+  research-area:  Matrix theory, in connection with positivity and combinatorics
 
 - name:	Gargi Ghosh
   phd: IISER Kolkata
@@ -50,7 +50,7 @@
   position: UGC Kothari
   image: true
   research-area: Geometry of Banach spaces, greedy-type approximation algorithms
-
+De 
 
 - name	:	Gouranga Mallik 
   phd: IIT Bombay
