--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -1,3 +1,9 @@
+- name: Mrigendra Singh Kushwaha
+  phd: IMSc, Chennai
+  user-id: mrigendrak
+  position: Raman PDF
+  image: true
+  research-area: Representation Theory
 
 - name: Kiran Kumar Behera 
   phd: IIT Roorkee
