--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -70,9 +70,9 @@
 
 
 - name : Debmalya Sain 
-  phd: Jadavpur
+  phd: Jadavpur University
   user-id: debmalyasain
-  position: UGC Kothari
+  position: NPDF
   image: true
   research-area: Geometry of normed linear spaces
  
