--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -168,6 +168,6 @@
   user-id: spratibha
   position: NPDF
   image: true
-  reaserch-area: Optimal control problems governed by PDEs, Finite element method
+  reserch-area: Optimal control problems governed by PDEs, Finite element method
 
 
