faculty data update

--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -272,8 +272,8 @@
   position: Assistant Professor
   research-areas: Calculus of Variations, PDEs, Geometric analysis
   phd: EPFL, Switzerland
-  phone-ext: 
-  office: 
+  phone-ext: 3755
+  office: X12
   website: http://www.math.iisc.ac.in/~ssil/
   author-name: Sil, Swarnendu
 
