--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -2408,6 +2408,20 @@
   mrclass: '93B05 (93C15)'
   volume: '241'
 
+- number: '4'
+  author: 'Gupta, Rahul and Krishna, Amalendu'
+  fjournal: 'Annals of K-Theory'
+  url: 'https://doi.org/10.2140/akt.2021.6.673'
+  pages: '673-712'
+  year: '2021'
+  title: 'Relative $K$-theory via 0-cycles in finite characteristic'
+  doi: '10.2140/akt.2021.6.673'
+  issn: '2379-1683'
+  journal: 'Ann. K-Theory'
+  mrnumber: '4382800'
+  mrclass: '14C25 (19E08 19E15)'
+  volume: '6'
+
 - number: '1'
   author: 'Boggarapu, Pradeep and Thangavelu, S.'
   fjournal: 'Israel Journal of Mathematics'
@@ -6617,7 +6631,7 @@
 
 - mrnumber: '4362539'
   pages: '408-418'
-  year: '[2020] \copyright 2020'
+  year: '2020'
   publisher: 'Am. Inst. Math. Sci. (AIMS), Springfield, MO'
   booktitle: 'Hyperbolic problems: theory, numerics, applications'
   title: 'A posteriori error analysis for patch-wise local projection stabilized FEM for convection-diffusion problems'
@@ -7578,19 +7592,6 @@
   mrclass: '47G05 (45P05 47B35)'
   volume: '114'
 
-- author: 'Binda, Federico and Krishna, Amalendu'
-  fjournal: 'Journal de l&#39;&Eacute;cole polytechnique. Math&eacute;matiques'
-  url: 'https://doi.org/10.5802/jep.183'
-  pages: '281-325'
-  year: '2022'
-  title: 'Zero-cycle groups on algebraic varieties'
-  doi: '10.5802/jep.183'
-  issn: '2429-7100'
-  journal: 'J. &Eacute;c. polytech. Math.'
-  mrnumber: '4373665'
-  mrclass: '14C15 (14F42 19E15)'
-  volume: '9'
-
 - number: '1'
   author: 'Patil, D. P.'
   fjournal: 'Pacific-Asian Journal of Mathematics'
@@ -7773,6 +7774,32 @@
   mrnumber: '2391022'
   mrclass: '42A38 (42B99 43A90)'
   volume: '185'
+
+- author: 'Ayyer, Arvind and Nadeau, Philippe'
+  fjournal: 'European Journal of Combinatorics'
+  url: 'https://doi.org/10.1016/j.ejc.2022.103511'
+  pages: 'Paper No. 103511, 20'
+  year: '2022'
+  title: 'Combinatorics of a disordered two-species ASEP on a torus'
+  doi: '10.1016/j.ejc.2022.103511'
+  issn: '0195-6698'
+  journal: 'European J. Combin.'
+  mrnumber: '4379818'
+  mrclass: '82C44 (05A15 05A19)'
+  volume: '103'
+
+- author: 'Binda, Federico and Krishna, Amalendu'
+  fjournal: 'Journal de l&#39;&Eacute;cole polytechnique. Math&eacute;matiques'
+  url: 'https://doi.org/10.5802/jep.183'
+  pages: '281-325'
+  year: '2022'
+  title: 'Zero-cycle groups on algebraic varieties'
+  doi: '10.5802/jep.183'
+  issn: '2429-7100'
+  journal: 'J. &Eacute;c. polytech. Math.'
+  mrnumber: '4373665'
+  mrclass: '14C15 (14F42 19E15)'
+  volume: '9'
 
 - number: '1'
   author: 'Prasad, Phoolan'
@@ -8762,6 +8789,20 @@
   mrnumber: '1447888'
   mrclass: '22E46 (81R05)'
   volume: '38'
+
+- number: '2'
+  author: 'Bhattacharyya, Tirthankar and Sau, Haripada'
+  fjournal: 'Journal of Operator Theory'
+  url: 'https://doi.org/10.7900/jot'
+  pages: '435-459'
+  year: '2022'
+  title: 'Interpolating sequences and the Toeplitz-Corona theorem on the symmetrized bidisk'
+  doi: '10.7900/jot'
+  issn: '0379-4024'
+  journal: 'J. Operator Theory'
+  mrnumber: '4396942'
+  mrclass: '47A13 (46E22 47A25 47A56 47A57 47B32)'
+  volume: '87'
 
 - number: '3'
   author: 'Paul, Kallol and Sain, Debmalya and Mal, Arpita and Mandal, Kalidas'
@@ -11880,6 +11921,20 @@
   mrclass: '76L05 (76N15)'
   volume: '46'
 
+- number: '2'
+  author: 'Khare, Apoorva and Tikaradze, Akaki'
+  fjournal: 'Communications in Algebra'
+  url: 'https://doi.org/10.1080/00927872.2021.1959922'
+  pages: '498-507'
+  year: '2022'
+  title: 'Covering modules by proper submodules'
+  doi: '10.1080/00927872.2021.1959922'
+  issn: '0092-7872'
+  journal: 'Comm. Algebra'
+  mrnumber: '4375520'
+  mrclass: '13C05 (13F05 13F10 13L05)'
+  volume: '50'
+
 - author: 'Chandru, Vijay and Rao, M. R.'
   mrnumber: '1797199'
   pages: '32-1-32-45'
@@ -14449,20 +14504,6 @@
   volume: '336'
 
 - number: '5'
-  author: 'Sarje, Anil K. and Biswas, Nripendra N. and '
-  fjournal: 'International Journal of Systems Science'
-  url: 'http://dx.doi.org/10.1080/00207728308926474'
-  pages: '497-512'
-  year: '1983'
-  title: 'Testing threshold functions using implied minterm structure'
-  doi: '10.1080/00207728308926474'
-  issn: '0020-7721'
-  journal: 'Internat. J. Systems Sci.'
-  mrnumber: '706468'
-  mrclass: '94C10'
-  volume: '14'
-
-- number: '5'
   author: 'Bennett, Nathan and Iyer, Srikanth K. and Jammalamadaka, S. Rao'
   fjournal: 'Communications in Statistics. Theory and Methods'
   url: 'https://doi.org/10.1080/03610926.2015.1041981'
@@ -14826,6 +14867,34 @@
   volume: '121'
 
 - number: '2'
+  author: 'Roy, Saikat and Bagchi, Satya and Sain, Debmalya'
+  fjournal: 'Mediterranean Journal of Mathematics'
+  url: 'https://doi.org/10.1007/s00009-022-01979-7'
+  pages: 'Paper No. 58, 15'
+  year: '2022'
+  title: 'Birkhoff-James orthogonality in complex Banach spaces and Bhatia-\vSemrl theorem revisited'
+  doi: '10.1007/s00009-022-01979-7'
+  issn: '1660-5446'
+  journal: 'Mediterr. J. Math.'
+  mrnumber: '4383345'
+  mrclass: '46B20 (47A12 47A30)'
+  volume: '19'
+
+- number: '5'
+  author: 'Sarje, Anil K. and Biswas, Nripendra N. and '
+  fjournal: 'International Journal of Systems Science'
+  url: 'http://dx.doi.org/10.1080/00207728308926474'
+  pages: '497-512'
+  year: '1983'
+  title: 'Testing threshold functions using implied minterm structure'
+  doi: '10.1080/00207728308926474'
+  issn: '0020-7721'
+  journal: 'Internat. J. Systems Sci.'
+  mrnumber: '706468'
+  mrclass: '94C10'
+  volume: '14'
+
+- number: '2'
   author: 'Narayanan, E. K. and Sitaram, A.'
   fjournal: 'Monatshefte f&uuml;r Mathematik'
   url: 'http://dx.doi.org/10.1007/s00605-012-0429-2'
@@ -14880,6 +14949,20 @@
   mrnumber: '788819'
   mrclass: '78A45'
   volume: '16'
+
+- number: '9'
+  author: 'Bhowmik, Mithun and Pusti, Sanjoy'
+  fjournal: 'Journal of Functional Analysis'
+  url: 'https://doi.org/10.1016/j.jfa.2022.109413'
+  pages: 'Paper No. 109413, 40'
+  year: '2022'
+  title: 'An extension problem and Hardy&#39;s inequality for the fractional Laplace-Beltrami operator on Riemannian symmetric spaces of noncompact type'
+  doi: '10.1016/j.jfa.2022.109413'
+  issn: '0022-1236'
+  journal: 'J. Funct. Anal.'
+  mrnumber: '4379903'
+  mrclass: '43A85 (22E30 26A33)'
+  volume: '282'
 
 - number: '1'
   author: 'Maitra, Anwoy'
@@ -16058,19 +16141,6 @@
   mrclass: '37F10'
   volume: '79'
 
-- number: '1'
-  author: 'Surma Devi, C. D. and Nath, G.'
-  fjournal: 'Proceedings of the National Academy of Sciences, India. Section A. Physical Sciences'
-  pages: '30-42'
-  year: '1985'
-  mrreviewer: 'Frederick A. Howes'
-  title: 'Self-similar solution of unsteady incompressible three-dimensional asymmetric stagnation point boundary layers'
-  issn: '0369-8203'
-  journal: 'Proc. Nat. Acad. Sci. India Sect. A'
-  mrnumber: '825969'
-  mrclass: '76D10'
-  volume: '55'
-
 - number: '1-2'
   author: 'Bhattacharya, Angshuman and Bhattacharyya, Tirthankar'
   fjournal: 'Acta Universitatis Szegediensis. Acta Scientiarum Mathematicarum'
@@ -16266,6 +16336,33 @@
   mrnumber: '2866997'
   mrclass: '53C21 (53C44)'
   volume: '60'
+
+- number: '3-4'
+  author: 'B&ouml;cherer, Siegfried and Das, Soumya'
+  fjournal: 'Manuscripta Mathematica'
+  url: 'https://doi.org/10.1007/s00229-021-01277-8'
+  pages: '405-434'
+  year: '2022'
+  title: 'On Fourier coefficients of elliptic modular forms ${\rm mod}\,\ell$ with applications to Siegel modular forms'
+  doi: '10.1007/s00229-021-01277-8'
+  issn: '0025-2611'
+  journal: 'Manuscripta Math.'
+  mrnumber: '4385379'
+  mrclass: '11F30 (11F33 11F46 11F50)'
+  volume: '167'
+
+- number: '1'
+  author: 'Surma Devi, C. D. and Nath, G.'
+  fjournal: 'Proceedings of the National Academy of Sciences, India. Section A. Physical Sciences'
+  pages: '30-42'
+  year: '1985'
+  mrreviewer: 'Frederick A. Howes'
+  title: 'Self-similar solution of unsteady incompressible three-dimensional asymmetric stagnation point boundary layers'
+  issn: '0369-8203'
+  journal: 'Proc. Nat. Acad. Sci. India Sect. A'
+  mrnumber: '825969'
+  mrclass: '76D10'
+  volume: '55'
 
 - number: '4'
   author: 'Sachdev, P. L. and Sarathy, R.'
